add link tracker
